fix overflow issue

--- a/plugins/cardwall/www/themes/default/css/style.css
+++ b/plugins/cardwall/www/themes/default/css/style.css
@@ -1,3 +1,6 @@
+#cardwall {
+    padding-bottom: 1em;
+}
 .cardwall_board-actions {
     text-align: right;
     margin-bottom: 1em;
